fuel/modules/fuel/assets/css/fuel.css
/* ... */
.ico_permissions { background-image: url(../images/ico_key.png); }
.ico_precedence { background-image: url(../images/ico_table_row_insert.png); }
.ico_publish { background-image: url(../images/ico_page_green.png); }
.ico_refresh { background-image: url(../images/ico_arrow_refresh.png); }
.ico_remove_line { background-image: url(../images/ico_cancel.png); float: right;  }
.ico_replace { background-image: url(../images/ico_page_refresh.png); }
.ico_save { background-image: url(../images/ico_disk.png); }
.ico_select_all { background-image: url(../images/ico_page_white_stack.png); }
.ico_settings { background-image: url(../images/ico_table_gear.png); }
.ico_sitevariables { background-image: url(../images/ico_page_white_code.png); }
.ico_success {  background-image: url(../images/ico_accept.png); }
.ico_table {  background-image: url(../images/ico_table.png); }
.ico_tags {  background-image: url(../images/ico_tag_blue.png); }
.ico_categories {  background-image: url(../images/ico_folder_page.png); }
.ico_tools { background-image: url(../images/ico_wrench.png); }
.ico_tree {  background-image: url(../images/ico_vert_tree.png); }
.ico_unpublish { background-image: url(../images/ico_page_red.png); }
.ico_users { background-image: url(../images/ico_status_online.png); }
.ico_users_send_email { background-image: url(../images/ico_email_go.png); }
.ico_view { background-image: url(../images/ico_layout_content.png); }
.ico_view_all { background-image: none; line-height: 22px; padding-left: 5px; }
.ico_warn {  background-image: url(../images/ico_error.png); }
.ico_yes {  background-image: url(../images/ico_accept.png); }


/******************************************************
main panel 
******************************************************/
div#fuel_main_panel { position: absolute; top: 0px; left: 201px; right: 0px; bottom: 0px; background-color: #fff; }

/* bread nav */
div#fuel_main_top_panel { height: 29px; font-size: 13px; color: #fff; background-color: #e7e7e7; border-bottom: 1px solid #ccc; overflow: hidden; }
div#fuel_main_top_panel h2 { color: #333; text-shadow: #fff 0px 1px 0px; line-height: 30px; margin-left: 11px; }
div#fuel_main_top_panel h2 a { color: #0E3E7E; }
div#fuel_main_top_panel li { float: left; display: block; list-style: none; line-height: 29px; font-weight: bold; border-right: 1px solid #6e6e6e;}
div#fuel_main_top_panel li a { display: block; color: #fff; text-shadow: #555 0px 1px 0px; background: #6d6d6d url(../images/tab.png) repeat-x;  padding: 0 15px; }
div#fuel_main_top_panel li a:hover { background: #7c7c7c url(../images/tab.png) repeat-x 0 -29px; }
div#fuel_main_top_panel li.active a { background: #e7e7e7 url(../images/tab.png) repeat-x 0 -58px; color: #113556; text-shadow: #fff 0px 1px 0px;  }
div#fuel_login_logout { position: absolute; top: 8px; right: 15px; font-size: 11px; color: #333; background-color: #e7e7e7; height: 21px;text-shadow: #fff 0px 1px 0px;  }

div#fuel_actions { height: 46px; border-bottom: 1px solid #ccc; position: relative; min-width: 680px;
background: #eee; 
background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f6f6f6), color-stop(1, #ddd));
background: -moz-linear-gradient(top center, #f6f6f6 0%, #ddd 100%);
filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#dddddd');
 }

/* main content */
div#fuel_main_content { overflow: auto; position: absolute; top: 99px; left: 0px; right: 0px; bottom: 0px; }
div#fuel_main_content .buttonbar li { margin-right: 15px; }
div#fuel_main_content_inner h3 { background-color: #f6f6f6; padding: 5px; margin-bottom: 10px; }
div#fuel_main_content_inner { padding: 15px 37px; }
div#fuel_main_content_inner .bullets { margin-left: 15px; }
div.noactions { top: 51px !important; }
div.notitlebar { top: 69px !important; }
div.noactions_notitlebar { top: 22px !important; }
div.noactions_nonotification { top: 29px !important; }

/* inline/compact mode */
div#fuel_main_panel_compact { position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: #fff; }
div#fuel_main_content_compact { background-color: #fff; overflow: auto; position: absolute; top: 99px; left: 0px; right: 0px; bottom: 0px; }

/* notification */
div#fuel_notification { height: 21px; border-bottom: 1px solid #ccc; background-color: #ecf1f5; text-overflow: ellipsis; overflow: hidden; position: relative; }
div.notification p, div.notification div, div.notification ul {  margin: 0; min-height: 15px; line-height: 15px; padding: 3px 0 3px 35px; list-style: none; background-repeat: no-repeat; background-position: 15px 3px; list-style: none; }
div.notification .ico { line-height: 15px; }

/* dashboard */
div.dashboard_pod { float: left; margin-right: 10px }
div.dashboard_module { float: left; margin-right: 10px; margin-top: 10px; }

/* filters */
div#filters { position: absolute; right: 15px; top: 12px; }
a#multi_delete { display: block; }

/* other items */
div#other_items { float: left; margin: 3px 20px 0px 20px; }
div#other_items select{  max-width: 300px;}

/* button bar*/
div#action_btns { position: absolute; top: 9px; left: 15px; }
div.buttonbar ul {  height: 27px; float: left; }
div.buttonbar li { border-top: 1px solid #ccc; border-left: 1px solid #ccc; border-bottom: 1px solid #ccc;  float: left;list-style: none;  margin: 0;
  background: #e6e6e6 url(../images/btn.png) repeat-x; 
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #ddd));
  background: -moz-linear-gradient(top center, #fff 0%, #ddd 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd');
 }
/* ... */

